[gd_scene load_steps=4 format=3 uid="uid://1tee4hpui1pn"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_x673g"]
[ext_resource type="FontFile" uid="uid://b51lbo8bk5ry6" path="res://art/fonts/Xolonium-Regular.ttf" id="2_sjmoo"]
[ext_resource type="Texture2D" uid="uid://jkbvivc728q1" path="res://art/items/snowflake_128.png" id="3_17sqm"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_x673g")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_sjmoo")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -37.5
offset_right = 240.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Dodge the Creeps !"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 263.0
offset_top = -679.0
offset_right = 328.0
offset_bottom = -612.0
grow_horizontal = 2
grow_vertical = 0
text = "Pause"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 209.0
offset_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_17sqm")
expand_mode = 3

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
